# uspell

./: .gitignore  Makefile.am  README  autogen.sh  configure.in  libuspell.pc.in
dic/: Makefile.am  NOTES  american.uspell.trans  yiddish.uspell.trans
doc/: Makefile.am  doc.txt
enchant-provider/: Makefile.am  README  configure.ac
src/: Makefile.am  driver.cpp  lookup2.cpp  lookup2.h  myparameters.h  mytypes.h  transcribe.cpp  transcribe.h  uniprops.cpp  uniprops.h  uspell.cpp  uspell.h  utf8convert.cpp  utf8convert.h
