AC_INIT(src/uspell.h)

dnl Set release number
dnl This is derived from "Versioning" chapter of info libtool documentation.
PACKAGE=libuspell
dnl     4a) Increment when removing or changing interfaces.
USPELL_MAJOR_VERSION=0
dnl     4a) 5) Increment when adding interfaces.
dnl     6) Set to zero when removing or changing interfaces.
USPELL_MINOR_VERSION=1
dnl     3) Increment when interfaces not changed at all,
dnl               only bug fixes or internal changes made.
dnl     4b) Set to zero when adding, removing or changing interfaces.
USPELL_MICRO_VERSION=0
dnl
dnl     Set this too
MAJOR_VERSION_PLUS_MINOR_VERSION=`expr $USPELL_MAJOR_VERSION + $USPELL_MINOR_VERSION`
dnl
VERSION=$USPELL_MAJOR_VERSION.$USPELL_MINOR_VERSION.$USPELL_MICRO_VERSION
dnl Version info for libraries = CURRENT:REVISION:AGE
VERSION_INFO=$MAJOR_VERSION_PLUS_MINOR_VERSION:$USPELL_MICRO_VERSION:$USPELL_MINOR_VERSION
AC_SUBST(VERSION_INFO)
AC_SUBST(USPELL_MAJOR_VERSION)
AC_SUBST(USPELL_MINOR_VERSION)
AC_SUBST(USPELL_MICRO_VERSION)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_STDC_HEADERS
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL

AC_C_CONST
AC_PROG_CXX

AC_MSG_CHECKING([for native Win32])
case "$host" in
  *-*-mingw*)
    native_win32=yes
    ;;
  *)
    native_win32=no
    ;;
esac
AC_MSG_RESULT([$native_win32])
AM_CONDITIONAL(OS_WIN32, test "x$native_win32" = "xyes")

AC_OUTPUT([
Makefile
libuspell.pc
src/Makefile
doc/Makefile
dic/Makefile
])

dnl =============================================================================================
echo "
$PACKAGE-$VERSION

	prefix:                         ${prefix}
	compiler:                       ${CXX}
"
